# ClassHub

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  ops_runner.py  schemas.py
app/api/: router.py
app/api/routes/: admin.py  auth.py  bookings.py  clients.py  ops.py  ui.py
app/core/: config.py
app/db/: models.py  session.py
app/services/: automation.py  client_context.py  client_intelligence.py  demo_data.py  domain.py  sync_state.py
app/services/momence/: browser.py  client.py  token_store.py
app/services/sync/: jobs.py
app/static/demo/: app.js  index.html  styles.css
railway/: run-ops-sync.sh  run-web.sh
scripts/: import_customer_fields_sqlite.py  import_memberships_and_notes_sqlite.py
tests/: test_automation_modes.py  test_client_logic.py  test_momence_client.py
